<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    android:orientation="vertical"
    tools:context=".Login">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:fontFamily="@font/mulibold"
        android:textSize="50sp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="85dp"
        android:textAlignment="center"
        android:textColor="@color/RealMagenta"


        />

    <EditText
        android:id="@+id/EDT1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint"

        android:inputType="textPersonName"
        android:background="@drawable/solid_borders"
        android:fontFamily="@font/muliblack"
        android:textSize="20sp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="90dp"
        android:textAlignment="center"

        />

    <EditText
        android:id="@+id/EDT2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"

        android:inputType="textPassword"
        android:background="@drawable/solid_borders"
        android:fontFamily="@font/muliblack"
        android:textSize="20sp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Autheticate_Login"
        android:background="@drawable/button_solid_border"
        android:text="@string/login"
        android:fontFamily="@font/muliblack"
        android:textSize="20sp"
        android:padding="20dp"
        android:layout_marginHorizontal="85dp"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/RegistrationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/button_solid_border"
        android:onClick="Register_User"
        android:text="@string/register"
        android:fontFamily="@font/muliblack"
        android:textSize="20sp"
        android:layout_marginHorizontal="85dp"
        android:padding="20dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        />

</LinearLayout>