<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/TitleBlue"
    tools:context=".HomeScreen">

    <TextView
        android:id="@+id/FriendList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mulibold"
        android:text="@string/YourFriendsList"
        android:textColor="@color/FitWhite"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="35dp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        />


    <ListView
            android:id="@+id/Friends_List"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/solid_borders2"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="25dp"
            android:textAlignment="center"
            android:layout_marginBottom="5dp">
        </ListView>


    <Button
        android:id="@+id/CHECK_FRIEND_REQUEST_LIST"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/solid_borders"
        android:text="@string/CHECKFRIENDLIST"
        android:fontFamily="@font/muliblack"
        android:textSize="21sp"
        android:textAlignment="center"
        android:onClick="goToAddFriends"
        android:layout_gravity="center"
        android:textColor="@color/FitWhite"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="55dp"
        />

    <Button
        android:id="@+id/DISCOVER_FRIENDS_LIST"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="55dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/solid_borders"
        android:fontFamily="@font/muliblack"
        android:onClick="goToDiscoverFriends"
        android:padding="10dp"
        android:text="@string/DISCOVERFRIENDSLIST"
        android:textAlignment="center"
        android:textColor="@color/FitWhite"
        android:textAllCaps="false"
        android:textSize="21sp" />


</LinearLayout>