<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"

    android:id="@+id/gallerylayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".Login">

    <Gallery
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="737dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-7dp"
        android:background="@color/TitleBlue" />

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="470dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="47dp"
        android:layout_marginBottom="214dp"
        android:background="@drawable/layout_white_curved"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="55dp"
            android:fontFamily="@font/mulibold"
            android:shadowColor="@color/ElectricBlue"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="5"
            android:text="@string/Login"
            android:textAlignment="center"
            android:textColor="@color/TitleBlue"
            android:textSize="55sp"


            />

        <EditText
            android:id="@+id/EDT1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="90dp"

            android:fontFamily="@font/muliblack"
            android:hint="@string/login_hint"
            android:inputType="textPersonName"
            android:shadowColor="@color/RealMagenta"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:textAlignment="viewStart"
            android:textColorHint="@color/TheRightGrey"
            android:textSize="20sp"

            />

        <EditText
            android:id="@+id/EDT2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/muliblack"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:shadowColor="@color/RealMagenta"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:textAlignment="viewStart"
            android:textColorHint="@color/TheRightGrey"
            android:textSize="20sp" />


    </LinearLayout>

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/solid_borders"
        android:layout_marginHorizontal="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="185dp"
        android:text="Button" />
    <Button
        android:id="@+id/RegistrationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/solid_borders"
        android:layout_marginHorizontal="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="185dp"
        android:text="Button" />


</RelativeLayout>